fix on safari

--- a/Software.css
+++ b/Software.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 50vw;
+  min-height: 100vh;
 }
 
 .u-section-1 .u-text-1 {
